Update prisma schema

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,7 +1,8 @@
-DATABASE_URL=
-
 # Database connection parameters
+DATABASE_URL="sqlserver://server;instanceName=instanceName;database=database;user=user;password=password;encrypt=false;trustServerCertificate=true"
+
 DB_SERVER=
+DB_INSTANCENAME=
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
