--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,9 @@
     "AGTPCP",
     "AGTSATTAX",
     "aioodbc",
+    "AMENLOC",
     "AMTFIN",
+    "APLSTD",
     "arabic",
     "ARACPYNAM",
     "AUSFINSRV",
@@ -135,6 +137,7 @@
     "IMPCPY",
     "INIPER",
     "INSCTYFLG",
+    "INSTANCENAME",
     "INVCND",
     "invdta",
     "invdtaamt",
@@ -144,9 +147,14 @@
     "IVYFCY",
     "IVYFLG",
     "KACT",
+    "LANCHP",
+    "LANMES",
+    "LANNUM",
     "LEGCPY",
     "LNDAUZ",
     "MAIFCY",
+    "menloc",
+    "MENLOC",
     "MFGFLG",
     "MFGWRH",
     "MFPWRH",
@@ -157,6 +165,7 @@
     "NBPOS",
     "NIVDEF",
     "NIVRAZ",
+    "nodeman",
     "NUMADD",
     "OBYDIE",
     "OCNFLG",
@@ -241,6 +250,7 @@
     "TRECPY",
     "TRFWRH",
     "TSCCOD",
+    "tsnd",
     "typegraphql",
     "UPDDAT",
     "UPDDATTIM",
