--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsnd --respawn --transpile-only src/index.ts",
-    "local-menus": "ts-node scripts/generateLocalMenus.ts"
+    "local-menus": "ts-node scripts/generateLocalMenus.ts",
+    "build:schema": "ts-node scripts/generate-schema.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,13 +26,13 @@
     "eslint-plugin-prettier": "^5.4.0",
     "nodeman": "^1.1.2",
     "prettier": "^3.5.3",
-    "prisma": "^5.16.2",
+    "prisma": "^6.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@apollo/server": "^4.12.0",
-    "@prisma/client": "^5.16.2",
+    "@prisma/client": "^6.9.0",
     "argon2": "^0.43.0",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
