--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -247,6 +247,7 @@
     "STRDATEFAT",
     "STRHOU",
     "STRPER",
+    "TABRATVAT",
     "TAXAGCNAM",
     "TAXAGCNUM",
     "TAXAGNNAM",
@@ -273,6 +274,7 @@
     "VALEUR",
     "VATENDDAT",
     "VATEXN",
+    "VATRAT",
     "VATSTRDAT",
     "WRHFLG",
     "WRHGES",
