Tax rate calculation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
     "COMMTYPE",
     "COTCHX",
     "COTPITRQD",
+    "cours",
     "CPYLEGFLG",
     "CPYLOG",
     "CPYNAM",
@@ -103,7 +104,10 @@
     "ENDHOU",
     "eori",
     "EORINUM",
+    "EURDAT",
+    "EURFLG",
     "european",
+    "EURRAT",
     "EXPNUM",
     "EXTNUM",
     "FCTNUM",
@@ -114,6 +118,7 @@
     "FINFLG",
     "FINPER",
     "FINRSPFCY",
+    "FLEURO",
     "FLGAPP",
     "FLGFOR",
     "FLGPEC",
@@ -247,6 +252,7 @@
     "STRDATEFAT",
     "STRHOU",
     "STRPER",
+    "TABCUR",
     "TABRATVAT",
     "TAXAGCNAM",
     "TAXAGCNUM",
