Creation of sales order done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -147,6 +147,8 @@
     "IMPCPY",
     "incoterm",
     "INIPER",
+    "INRATI",
+    "INRNOT",
     "INSCTYFLG",
     "INSTANCENAME",
     "Intersite",
@@ -241,6 +243,8 @@
     "SHIWRH",
     "SOIPER",
     "SOLFIN",
+    "SORDERP",
+    "SORDERQ",
     "SPABPCTSD",
     "SPABPSTSD",
     "SPAOPEIGIC",
